# apex

./: .gitignore  8  APEX_V2_PLAN.md  CLAUDE.md  README.md  docker-compose.yml  paper_state.json  paper_state_v2.json.pre-edge-fix  pyproject.toml
apex/: cli.py  config.py  node.py
apex/data/: quality.py  store.py  streams.py
apex/data/features/: __init__.py  builder.py  graph_features.py  macro_features.py  market_features.py  prediction_features.py  sentiment_features.py  sports_features.py  (+1 more)
apex/ensemble/: __init__.py  meta_learner.py  signal.py  thompson_sampling.py  trade_gate.py
apex/models/: __init__.py  bayesian_calibration.py  finbert_sentiment.py  lgbm_return.py  lstm_regime.py  ppo_position.py  registry.py  tft_forecast.py  xgboost_prob.py
apex/monitoring/: __init__.py  alerts.py  dashboard.py  data_health.py  performance.py
apex/research/: __init__.py  feature_discovery.py  historical_data.py  strategy_discovery.py  walk_forward.py
apex/risk/: __init__.py  capital_allocator.py  circuit_breaker.py  correlation_monitor.py  portfolio_risk.py  position_sizer.py  regime_detector.py
apex/strategies/: __init__.py  apex_strategy.py  bayesian_forecaster.py  calibration_exploit.py  convergence.py  earnings.py  execution_optimizer.py  info_arb.py  microstructure.py  regime_selector.py  smart_mm.py  vol_surface.py
apex/training/: __init__.py  scheduler.py  train_finbert.py  train_lgbm.py  train_ppo.py  train_regime.py  train_tft.py  train_xgb.py  validator.py
migrations/: 001_init.sql  001_init_plain.sql
scripts/: apex_v2.py  backfill_narratives.py  code_watcher.py  collect_data.py  crypto_agent.py  dashboard.html  dashboard_v2.html  enhanced_weather.py  events_agent.py  flywheel_job.py  learner.py  ledger.py  macro_agent.py  reporter.py  run_apex_v2.sh  run_paper.py  sports_agent.py  telegram_commander.py  trade_narrator.py  train_models.py  tt_trader.py  ui_watcher.py  weather_agent.py  weather_backtest.py  weather_data_collector.py
(+8 files in other folders)
