[project]
name = "apex"
version = "0.1.0"
description = "APEX: Adaptive Prediction EXchange - ML-driven multi-venue trading system"
requires-python = ">=3.12,<3.15"
readme = "README.md"
license = "MIT"

dependencies = [
    # Execution engine
    "nautilus_trader>=1.200",

    # ML Models - Gradient Boosted Trees
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",

    # ML Models - Deep Learning
    "torch>=2.4",
    "onnxruntime>=1.19",

    # ML Models - Reinforcement Learning
    "stable-baselines3>=2.4",
    "gymnasium>=1.0",

    # NLP - Sentiment
    "transformers>=4.45",
    "sentence-transformers>=3.0",

    # Time Series
    "statsmodels>=0.14",

    # Data Processing
    "pandas>=2.2",
    "numpy>=2.0",
    "polars>=1.10",

    # Databases & Cache
    "redis[hiredis]>=5.2",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",

    # HTTP & WebSocket
    "httpx>=0.27",
    "websockets>=13.0",
    "aiohttp>=3.10",

    # Feature Engineering
    "scipy>=1.14",
    "hmmlearn>=0.3",

    # Infrastructure
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-telegram-bot>=21",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "click>=8.1",

    # Research & Optimization
    "optuna>=4.0",

    # Crypto / Blockchain
    "eth-account>=0.13",
    "py-clob-client>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
apex = "apex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
